[package]
name = "rust_web_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.6.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "main"  # Specify the name of the main binary file
path = "main.rs"  # Specify the path to the main.rs file
